# tweet-checker

./: .env.example  .gitignore  LICENSE  README.md  app.py  pyproject.toml  tweet_analysis.py  utils.py
src/: prompt.py  tweet_analysis.py  utils.py
